<?php
/**
 * Created by PhpStorm.
 *
 * User: sunxiaozhi
 * Date: 2018/3/13
 * Time: 16:36
 */

abstract class Operation
{
    abstract public function getValue($num1, $num2);
}